<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="options_open">Open navigation drawer</string>
    <string name="options_close">Close navigation drawer</string>

    <string name="studyentries">Studied</string>
    <string name="studyentry">Details</string>
    <string name="studyentry_dayofstudy">Day finished</string>
    <string name="studyentry_course">Course</string>
    <string name="studyentry_description">Description</string>

    <string name="courses">Select course</string>
    <string name="course">Course</string>
    <string name="course_name">Name</string>
    <string name="course_add">New course</string>

    <string name="readentries">Read</string>
    <string name="readentry">Details</string>
    <string name="readentry_dayread">Day finished</string>
    <string name="readentry_title">Title</string>
    <string name="readentry_part">Part</string>

    <string name="titles">Select title</string>
    <string name="title">Title</string>
    <string name="title_title">Title</string>
    <string name="title_author">Author</string>
    <string name="title_year">Year</string>
    <string name="title_add">New title</string>

    <string name="authors">Select author</string>
    <string name="author">Author</string>
    <string name="author_name">Name</string>
    <string name="author_add">New author</string>

    <string name="applicationentries">Applied</string>

    <string name="application">Application Details</string>
    <string name="application_recruiter">Recruiter</string>
    <string name="application_client">Client</string>
    <string name="application_start">Start</string>
    <string name="application_rate">Rate</string>
    <string name="application_add">New application</string>

    <string name="recruiters">Select recruiter</string>
    <string name="recruiter">Recruiter</string>
    <string name="recruiter_name">Name</string>
    <string name="recruiter_organisation">Organisation</string>
    <string name="recruiter_phone_number">Phone number</string>
    <string name="recruiter_pick">Choose contact</string>
    <string name="recruiter_add">New recruiter</string>

    <string name="organisations">Select organisation</string>
    <string name="organisation">Organisation</string>
    <string name="organisation_name">Name</string>
    <string name="organisation_add">New organisation</string>

    <string name="travelentries">Travelled</string>
    <string name="travelentry">Details</string>
    <string name="travelentry_dayoftravel">Day of travel</string>
    <string name="travelentry_direction">Direction</string>
    <string name="travelentry_away">To</string>
    <string name="travelentry_back">From</string>
    <string name="travelentry_place">Place</string>

    <string name="walkentries">Walked</string>
    <string name="walkentry">Details</string>
    <string name="walkentry_dayofwalk">Day of walk</string>
    <string name="walkentry_location">Near</string>

    <string name="runentries">Run</string>
    <string name="runentry">Details</string>
    <string name="runentry_dayofrun">Day of run</string>
    <string name="runentry_distance">Distance</string>
    <string name="runentry_note">Note</string>
    <string name="runentry_timetaken">Time</string>
    <string name="runentry_graph">Graph</string>

    <string name="entity_select">Select</string>
    <string name="entity_add">Add</string>
    <string name="entity_delete">Delete</string>
    <string name="entity_share">Share</string>

    <string name="dabble">Dabble</string>
    <string name="dabble_instructions">Pick strokes</string>
    <string name="dabble_go">Dabble</string>
    <string name="notification_sync_title">Journal Update</string>
    <string name="notification_sync_text">Your journal has been updated.</string>
    <string name="notification_out_of_date_title">Journal app out of date</string>
    <string name="notification_out_of_date_text">Your journal will not be synced until the app is updated</string>

    <string name="login">Add account</string>
    <string name="login_prompt_email">Email</string>
    <string name="login_prompt_password">Password</string>
    <string name="login_go">Sign in</string>
    <string name="login_error_invalid_email">This email address is invalid</string>
    <string name="login_error_invalid_password">This password is too short</string>
    <string name="login_error_incorrect_password">This password is incorrect</string>
    <string name="login_error_field_required">This field is required</string>

    <string name="settings">Settings</string>
    <string name="settings_entry_month_year">Month/Year</string>
    <string name="settings_entry_month_year_summary">Default month and year for journal entries</string>
    <string name="settings_sync">Syncing</string>
    <string name="settings_sync_account">Account</string>
    <string name="settings_sync_account_summary">The account that is used to sync</string>
    <string name="settings_sync_over_wifi">Only sync over wifi</string>
    <string name="settings_sync_over_wifi_summary">Only sync when the device is connected to wifi</string>

    <string name="about">About</string>
</resources>
