<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/list_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium_padding"
        style="@style/Header" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/list_header" />

    <ImageButton
        android:id="@+id/list_add"
        android:layout_width="@dimen/oval_button_size"
        android:layout_height="@dimen/oval_button_size"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/large_padding"
        android:src="@android:drawable/ic_input_add"
        android:tint="@android:color/white"
        android:background="@drawable/oval_button" />
</RelativeLayout>